Fixed folder name spelling error.

--- a/Examples/ch04/LayeredMvcDemo_V2_Decoupled/LayeredMvcDemo.Application/LayeredMvcDemo.Application.csproj
+++ b/Examples/ch04/LayeredMvcDemo_V2_Decoupled/LayeredMvcDemo.Application/LayeredMvcDemo.Application.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Services\ICustomerService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LayeredMcpDemo.DataAccess\LayeredMvcDemo.DataAccess.csproj">
+    <ProjectReference Include="..\LayeredMvcDemo.DataAccess\LayeredMvcDemo.DataAccess.csproj">
       <Project>{e603b95e-1c78-49ba-98b0-d02139131bcc}</Project>
       <Name>LayeredMvcDemo.DataAccess</Name>
     </ProjectReference>
