--- a/Examples/ch04/LayeredMvcDemo_V4_Unity/LayeredMvcDemo.Web/LayeredMvcDemo.Web.csproj
+++ b/Examples/ch04/LayeredMvcDemo_V4_Unity/LayeredMvcDemo.Web/LayeredMvcDemo.Web.csproj
@@ -160,7 +160,7 @@
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LayeredMcpDemo.DataAccess\LayeredMvcDemo.DataAccess.csproj">
+    <ProjectReference Include="..\LayeredMvcDemo.DataAccess\LayeredMvcDemo.DataAccess.csproj">
       <Project>{e603b95e-1c78-49ba-98b0-d02139131bcc}</Project>
       <Name>LayeredMvcDemo.DataAccess</Name>
     </ProjectReference>
