All packages.config in ch07 are migrated to PackageReference.

--- a/Examples/ch07/Ex03.ConfigFile/App.config
+++ b/Examples/ch07/Ex03.ConfigFile/App.config
@@ -3,7 +3,7 @@
   <configSections>
     <section name="unity" 
              type="Microsoft.Practices.Unity.Configuration.UnityConfigurationSection, 
-                   Microsoft.Practices.Unity.Configuration"/>
+                   Unity.Configuration"/>
   </configSections>
 
   <unity>   
